<resources>
    <string name="app_name">Music 21</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>
    <string name="text_home">Home</string>
    <string name="top_chart">Top Chart</string>
    <string name="genres">Genres</string>
    <string name="singer">Singer</string>
    <string name="music_offline">Music Offline</string>
    <string name="dowlnoad">Download</string>
    <string name="text_track_hot">Track Hot</string>
</resources>
