<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_home"
            android:icon="@drawable/ic_home"
            android:title="@string/text_home"/>
        <item
            android:id="@+id/item_rank"
            android:icon="@drawable/ic_chart"
            android:title="@string/top_chart"/>
        <item
            android:id="@+id/item_genres"
            android:icon="@drawable/ic_cd"
            android:title="@string/genres"/>
        <item
            android:id="@+id/item_singer"
            android:icon="@drawable/ic_singer"
            android:title="@string/singer"/>
        <item
            android:id="@+id/item_ofline"
            android:icon="@drawable/ic_mobile"
            android:title="@string/music_offline"/>
        <item
            android:id="@+id/item_download"
            android:icon="@drawable/ic_download"
            android:title="@string/dowlnoad"/>
    </group>
</menu>
